--- a/Code/Multiple iMapInvasives records identification using iNaturalist VisionAPI.ipynb
+++ b/Code/Multiple iMapInvasives records identification using iNaturalist VisionAPI.ipynb
@@ -107,16 +107,7 @@
    "id": "18fd94d8",
    "metadata": {},
    "source": [
-    "### Accessing iMapInvasives API https://www.imapinvasives.org/\n",
-    "#### iMap Username: tmollick@esf.edu\n",
-    "#### iMap Password: SUNY.esf@130436\n",
-    "\n",
-    "### Accessing iNaturalist VisionAPI from https://rapidapi.com/inaturalist-inaturalist-default/api/visionapi\n",
-    "#### URL: https://rapidapi.com/hub\n",
-    "#### Username: nyimapinvasives\n",
-    "#### Email address: imapinvasives@dec.ny.gov\n",
-    "#### Password: Phragmity1!\n",
-    "#### Currently we have $20 subscription for 2000 image recognition in every month of VisionAPI"
+    "### Accessing iMapInvasives API https://www.imapinvasives.org/"
    ]
   },
   {
