Update and upload

--- a/Code/Multiple iMapInvasives records identification using iNaturalist VisionAPI.ipynb
+++ b/Code/Multiple iMapInvasives records identification using iNaturalist VisionAPI.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 118,
    "id": "d4f9a90c",
    "metadata": {},
    "outputs": [],
@@ -47,17 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 121,
    "id": "bbf16c6d-e621-42e2-9304-d60ef83a01b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\tmollick\\\\Documents\\\\iMapML\\\\Code'"
+       "'C:\\\\Users\\\\tmollick\\\\Documents\\\\iMapML\\\\Outputs'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 123,
    "id": "15e145fc-ce99-4493-a570-7040081e0408",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 126,
    "id": "612c6ee8",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1125581, 1121008, 1121095, 1121096, 1360973, 1360974, 1360975, 1360976, 1360977, 1360980, 1288190, 1227478, 1288277, 1182091, 1182691, 1360967, 1360968, 1360969, 1316835, 1316836, 1316837, 1187847, 1254102, 1254103, 1360985, 1290943, 1290944, 1290945, 1290946, 1290947, 1290948, 1290949, 1290950, 1290951, 1290952, 1290953, 1290954, 1291325, 1328332, 1328333, 1161987, 1327760, 1296825, 1310163, 1310164, 1328328, 1328329, 1388757, 1324588, 1324589, 1055995, 1118045, 1131215, 1213130, 1320562, 1280366, 1282409, 1165030, 1170157, 421917, 425296, 425300, 512189, 515523, 515524, 515598, 515606, 525413, 525693, 525695, 525696, 525697, 525699, 525700, 526286, 526598, 526605, 526611, 526639, 527121, 527119, 527392, 528027, 528055, 528269, 528271, 528577, 528584, 529467, 529468, 530198, 530199, 530214, 531649, 531650, 531651, 531652, 531653, 531716, 531717]\n"
+      "[1332475, 1332476, 1393477, 1338545, 1248259, 1340080, 1352795, 1352795, 1019292, 1183051, 1183051, 1045374, 1323985, 1324561, 1332475, 1342737, 1344279, 1355565, 1346222, 1348527, 1351159, 1351160, 1351161, 1351361, 1352774, 1355297, 1355661, 1356143, 1391918, 512894, 1249974, 512896, 1352795, 1365813, 1410194, 1410778, 1390011, 1182390, 1391610, 1393455, 1069269, 1165069, 1165071, 1248256, 1271707, 1271710, 1272390, 1272676, 1272681, 1273444, 1283776, 1393478, 1037387, 1045228, 1061881, 1064408, 1078275, 1393542, 1394580, 1395140, 1395141, 1395697, 1407697, 1411932, 1411934, 1412011, 1412340, 1412327, 1413908, 1413910, 1414413, 1413907, 1438087, 1438089, 1438090, 1416694, 1441578, 1443662, 1435543, 1437877, 1439152, 1439282, 1440283, 1440287, 1441455, 1441456, 1442429, 1443498, 1443499, 1443499, 1443499, 1443499, 1444043, 1443662, 1443662, 1443662, 1443662, 1443662, 1443662]\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 128,
    "id": "1c5b58d7",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 131,
    "id": "4fa0d001",
    "metadata": {},
    "outputs": [
@@ -187,220 +187,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 134,
    "id": "0b14ebbe",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing presence ID: 1125581\n",
+      "Processing presence ID: 1332475\n",
       "\n",
-      "Processing presence ID: 1121008\n",
+      "Processing presence ID: 1332476\n",
       "\n",
-      "Processing presence ID: 1121095\n",
+      "Processing presence ID: 1393477\n",
       "\n",
-      "Processing presence ID: 1121096\n",
+      "Processing presence ID: 1338545\n",
       "\n",
-      "Processing presence ID: 1360973\n",
+      "Processing presence ID: 1248259\n",
       "\n",
-      "Processing presence ID: 1360974\n",
+      "Processing presence ID: 1340080\n",
       "\n",
-      "Processing presence ID: 1360975\n",
+      "Processing presence ID: 1352795\n",
+      "Skipping already processed presence ID: 1352795\n",
       "\n",
-      "Processing presence ID: 1360976\n",
+      "Processing presence ID: 1019292\n",
       "\n",
-      "Processing presence ID: 1360977\n",
+      "Processing presence ID: 1183051\n",
+      "Skipping already processed presence ID: 1183051\n",
       "\n",
-      "Processing presence ID: 1360980\n",
+      "Processing presence ID: 1045374\n",
       "\n",
-      "Processing presence ID: 1288190\n",
+      "Processing presence ID: 1323985\n",
       "\n",
-      "Processing presence ID: 1227478\n",
+      "Processing presence ID: 1324561\n",
+      "Skipping already processed presence ID: 1332475\n",
       "\n",
-      "Processing presence ID: 1288277\n",
+      "Processing presence ID: 1342737\n",
       "\n",
-      "Processing presence ID: 1182091\n",
+      "Processing presence ID: 1344279\n",
       "\n",
-      "Processing presence ID: 1182691\n",
-      "Skipping already processed presence ID: 1360967\n",
+      "Processing presence ID: 1355565\n",
       "\n",
-      "Processing presence ID: 1360968\n",
+      "Processing presence ID: 1346222\n",
       "\n",
-      "Processing presence ID: 1360969\n",
+      "Processing presence ID: 1348527\n",
       "\n",
-      "Processing presence ID: 1316835\n",
+      "Processing presence ID: 1351159\n",
       "\n",
-      "Processing presence ID: 1316836\n",
+      "Processing presence ID: 1351160\n",
       "\n",
-      "Processing presence ID: 1316837\n",
+      "Processing presence ID: 1351161\n",
       "\n",
-      "Processing presence ID: 1187847\n",
+      "Processing presence ID: 1351361\n",
       "\n",
-      "Processing presence ID: 1254102\n",
+      "Processing presence ID: 1352774\n",
       "\n",
-      "Processing presence ID: 1254103\n",
+      "Processing presence ID: 1355297\n",
       "\n",
-      "Processing presence ID: 1360985\n",
+      "Processing presence ID: 1355661\n",
       "\n",
-      "Processing presence ID: 1290943\n",
+      "Processing presence ID: 1356143\n",
       "\n",
-      "Processing presence ID: 1290944\n",
+      "Processing presence ID: 1391918\n",
       "\n",
-      "Processing presence ID: 1290945\n",
+      "Processing presence ID: 512894\n",
       "\n",
-      "Processing presence ID: 1290946\n",
+      "Processing presence ID: 1249974\n",
       "\n",
-      "Processing presence ID: 1290947\n",
+      "Processing presence ID: 512896\n",
+      "Skipping already processed presence ID: 1352795\n",
       "\n",
-      "Processing presence ID: 1290948\n",
+      "Processing presence ID: 1365813\n",
       "\n",
-      "Processing presence ID: 1290949\n",
+      "Processing presence ID: 1410194\n",
       "\n",
-      "Processing presence ID: 1290950\n",
+      "Processing presence ID: 1410778\n",
       "\n",
-      "Processing presence ID: 1290951\n",
+      "Processing presence ID: 1390011\n",
       "\n",
-      "Processing presence ID: 1290952\n",
+      "Processing presence ID: 1182390\n",
       "\n",
-      "Processing presence ID: 1290953\n",
+      "Processing presence ID: 1391610\n",
       "\n",
-      "Processing presence ID: 1290954\n",
+      "Processing presence ID: 1393455\n",
       "\n",
-      "Processing presence ID: 1291325\n",
+      "Processing presence ID: 1069269\n",
       "\n",
-      "Processing presence ID: 1328332\n",
+      "Processing presence ID: 1165069\n",
       "\n",
-      "Processing presence ID: 1328333\n",
+      "Processing presence ID: 1165071\n",
       "\n",
-      "Processing presence ID: 1161987\n",
+      "Processing presence ID: 1248256\n",
       "\n",
-      "Processing presence ID: 1327760\n",
+      "Processing presence ID: 1271707\n",
       "\n",
-      "Processing presence ID: 1296825\n",
+      "Processing presence ID: 1271710\n",
       "\n",
-      "Processing presence ID: 1310163\n",
+      "Processing presence ID: 1272390\n",
       "\n",
-      "Processing presence ID: 1310164\n",
+      "Processing presence ID: 1272676\n",
       "\n",
-      "Processing presence ID: 1328328\n",
+      "Processing presence ID: 1272681\n",
       "\n",
-      "Processing presence ID: 1328329\n",
+      "Processing presence ID: 1273444\n",
       "\n",
-      "Processing presence ID: 1388757\n",
+      "Processing presence ID: 1283776\n",
       "\n",
-      "Processing presence ID: 1324588\n",
+      "Processing presence ID: 1393478\n",
       "\n",
-      "Processing presence ID: 1324589\n",
+      "Processing presence ID: 1037387\n",
       "\n",
-      "Processing presence ID: 1055995\n",
+      "Processing presence ID: 1045228\n",
       "\n",
-      "Processing presence ID: 1118045\n",
+      "Processing presence ID: 1061881\n",
       "\n",
-      "Processing presence ID: 1131215\n",
+      "Processing presence ID: 1064408\n",
       "\n",
-      "Processing presence ID: 1213130\n",
+      "Processing presence ID: 1078275\n",
       "\n",
-      "Processing presence ID: 1320562\n",
+      "Processing presence ID: 1393542\n",
       "\n",
-      "Processing presence ID: 1280366\n",
+      "Processing presence ID: 1394580\n",
       "\n",
-      "Processing presence ID: 1282409\n",
+      "Processing presence ID: 1395140\n",
       "\n",
-      "Processing presence ID: 1165030\n",
+      "Processing presence ID: 1395141\n",
       "\n",
-      "Processing presence ID: 1170157\n",
+      "Processing presence ID: 1395697\n",
       "\n",
-      "Processing presence ID: 421917\n",
+      "Processing presence ID: 1407697\n",
       "\n",
-      "Processing presence ID: 425296\n",
+      "Processing presence ID: 1411932\n",
       "\n",
-      "Processing presence ID: 425300\n",
+      "Processing presence ID: 1411934\n",
       "\n",
-      "Processing presence ID: 512189\n",
+      "Processing presence ID: 1412011\n",
       "\n",
-      "Processing presence ID: 515523\n",
+      "Processing presence ID: 1412340\n",
       "\n",
-      "Processing presence ID: 515524\n",
+      "Processing presence ID: 1412327\n",
       "\n",
-      "Processing presence ID: 515598\n",
+      "Processing presence ID: 1413908\n",
       "\n",
-      "Processing presence ID: 515606\n",
+      "Processing presence ID: 1413910\n",
       "\n",
-      "Processing presence ID: 525413\n",
+      "Processing presence ID: 1414413\n",
       "\n",
-      "Processing presence ID: 525693\n",
+      "Processing presence ID: 1413907\n",
       "\n",
-      "Processing presence ID: 525695\n",
+      "Processing presence ID: 1438087\n",
       "\n",
-      "Processing presence ID: 525696\n",
+      "Processing presence ID: 1438089\n",
       "\n",
-      "Processing presence ID: 525697\n",
+      "Processing presence ID: 1438090\n",
       "\n",
-      "Processing presence ID: 525699\n",
+      "Processing presence ID: 1416694\n",
       "\n",
-      "Processing presence ID: 525700\n",
+      "Processing presence ID: 1441578\n",
       "\n",
-      "Processing presence ID: 526286\n",
+      "Processing presence ID: 1443662\n",
       "\n",
-      "Processing presence ID: 526598\n",
+      "Processing presence ID: 1435543\n",
       "\n",
-      "Processing presence ID: 526605\n",
+      "Processing presence ID: 1437877\n",
       "\n",
-      "Processing presence ID: 526611\n",
+      "Processing presence ID: 1439152\n",
       "\n",
-      "Processing presence ID: 526639\n",
-      "Failed to retrieve image. Status code: 404\n",
+      "Processing presence ID: 1439282\n",
       "\n",
-      "Processing presence ID: 527121\n",
+      "Processing presence ID: 1440283\n",
       "\n",
-      "Processing presence ID: 527119\n",
+      "Processing presence ID: 1440287\n",
       "\n",
-      "Processing presence ID: 527392\n",
+      "Processing presence ID: 1441455\n",
       "\n",
-      "Processing presence ID: 528027\n",
+      "Processing presence ID: 1441456\n",
       "\n",
-      "Processing presence ID: 528055\n",
+      "Processing presence ID: 1442429\n",
       "\n",
-      "Processing presence ID: 528269\n",
+      "Processing presence ID: 1443498\n",
       "\n",
-      "Processing presence ID: 528271\n",
+      "Processing presence ID: 1443499\n",
+      "Skipping already processed presence ID: 1443499\n",
+      "Skipping already processed presence ID: 1443499\n",
+      "Skipping already processed presence ID: 1443499\n",
       "\n",
-      "Processing presence ID: 528577\n",
-      "Failed to retrieve image. Status code: 404\n",
-      "\n",
-      "Processing presence ID: 528584\n",
-      "\n",
-      "Processing presence ID: 529467\n",
-      "Failed to retrieve image. Status code: 404\n",
-      "\n",
-      "Processing presence ID: 529468\n",
-      "Failed to retrieve image. Status code: 404\n",
-      "\n",
-      "Processing presence ID: 530198\n",
-      "\n",
-      "Processing presence ID: 530199\n",
-      "\n",
-      "Processing presence ID: 530214\n",
-      "Failed to retrieve image. Status code: 404\n",
-      "\n",
-      "Processing presence ID: 531649\n",
-      "\n",
-      "Processing presence ID: 531650\n",
-      "\n",
-      "Processing presence ID: 531651\n",
-      "\n",
-      "Processing presence ID: 531652\n",
-      "\n",
-      "Processing presence ID: 531653\n",
-      "\n",
-      "Processing presence ID: 531716\n",
-      "\n",
-      "Processing presence ID: 531717\n"
+      "Processing presence ID: 1444043\n",
+      "Skipping already processed presence ID: 1443662\n",
+      "Skipping already processed presence ID: 1443662\n",
+      "Skipping already processed presence ID: 1443662\n",
+      "Skipping already processed presence ID: 1443662\n",
+      "Skipping already processed presence ID: 1443662\n",
+      "Skipping already processed presence ID: 1443662\n"
      ]
     }
    ],
@@ -414,7 +393,7 @@
     "import time\n",
     "\n",
     "# Set the path where you will save the output file\n",
-    "output_file_path = r\"C:\\Users\\tmollick\\Documents\\iMapML\\Outputs\\Unconfirmed_100_Tree-of-heaven.xlsx\" # Change your output path\n",
+    "output_file_path = r\"C:\\Users\\tmollick\\Documents\\iMapML\\Outputs\\Unconfirmed_100_mixed_species.xlsx\" # Change your output path\n",
     "\n",
     "# Function to extract latitude and longitude from the imap_dictionary\n",
     "def get_lat_lon_from_imap(imap_dictionary):\n",
@@ -626,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 136,
    "id": "185bbfd2-8c8c-42f2-9fe4-1e99e8ddf411",
    "metadata": {},
    "outputs": [
@@ -793,7 +772,7 @@
        "4              2   NaN            4          NaN    NaN   NaN    4  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 139,
    "id": "45037b8f-5e04-49c8-8433-806c5992005d",
    "metadata": {},
    "outputs": [],
@@ -879,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 143,
    "id": "ea409711-cc35-4b66-b030-3ab8259e1889",
    "metadata": {},
    "outputs": [
@@ -887,14 +866,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing complete. File saved at: Unconfirmed_Tree-of-heaven_100_reports_final.xlsx with hyperlinks preserved and tier-specific geo_score applied.\n"
+      "Processing complete. File saved at: Unconfirmed_100_mixes_reports_final.xlsx with hyperlinks preserved and tier-specific geo_score applied.\n"
      ]
     }
    ],
    "source": [
     "# Define file paths\n",
-    "input_file = \"Unconfirmed_100_Tree-of-heaven.xlsx\"\n",
-    "output_file = \"Unconfirmed_Tree-of-heaven_100_reports_final.xlsx\"\n",
+    "input_file = \"Unconfirmed_100_mixed_species.xlsx\"\n",
+    "output_file = \"Unconfirmed_100_mixes_reports_final.xlsx\"\n",
     "\n",
     "# Load the original Excel file using OpenPyXL and Pandas\n",
     "wb = load_workbook(input_file, data_only=False)\n",
@@ -1009,6 +988,14 @@
     "\n",
     "print(f\"Processing complete. File saved at: {output_file} with hyperlinks preserved and tier-specific geo_score applied.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3233208d-c738-460b-b53b-fb53a4426a67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
